<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Power Wolf</string>
    <string name="app_label">Power Wolf</string>
    <string name="bond">bind</string>
    <string name="pair">pair</string>
    <string name="pair_fail">Matching failure</string>
    <string name="pair_success">Matching success</string>
    <string name="bond_message">bind the device %1$s ?</string>
    <string name="open_bt">open bluetooth</string>
    <string name="bluetooth_preference_paired_devices">can bonded device</string>
    <string name="bluetooth_preference_devices">available devices(click to pair)</string>
    <string name="bluetooth_pairing">"is pairing..."</string>
    <string name="idle">idle</string>
    <string name="accepting">accepting</string>
    <string name="ring">ring</string>
    <string name="offhook">offhook</string>
    <string name="disconnecting">disconnecting</string>
    <string name="current_version">current version:</string>
    <string name="latest_version">latest version:</string>
    <string name="firstly"> 1 .</string>
    <string name="check_update">check update</string>
    <string name="secondly">2 .</string>
    <string name="download">Download</string>
    <string name="thirdly">3 .</string>
    <string name="run_update">update now</string>
    <string name="not_need_update">your version is latest, need no update</string>
    <string name="checking_update">checking update . . .</string>
    <string name="download_title">OTA update</string>
    <string name="download_description">Download file for OTA update</string>
    <string name="read_me">------------------------------------\n
        Notices: \n
        1. need a SD card;\n
        2. need a network conntection;(WLAN preferred)\n
        3. maybe you need to reboot after download successly.\n
        ------------------------------------\n</string>
    <string name="check_now">Check now</string>
    <string name="get_watch_failed">failed to get information of watch \n please check bluetooth connection with wath </string>
    <string name="scheduled_check">Scheduled check</string>
    <string name="software_updates">Software updates</string>
    <string name="later">Later</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="install">Install</string>
    <string name="abandon">Abandon</string>
    <string name="sync_failed">Sync failed!</string>
    <string name="already_latest_version">This is already the latest version!</string>
    <string name="no_rollback_version">no version to back!</string>
    <string name="checking">Checking&#8230;</string>
    <string name="version_back">version back</string>
    <string name="product">product : </string>
    <string name="android_version">Android version: </string>
    <string name="system_version">system version：</string>
    <string name="update_to_version">update to version: %s</string>
    <string name="rollback_to_version">back to version: %s</string>
    <string name="current_version_ps">current version</string>
    <string name="please_choose_version">choose a version</string>
    <string name="downloading">Download task is running.Please wait ...</string>
    <string name="download_any_data">Download via any available data connection</string>
    <string name="download_only_wifi">Download via Wi-Fi only</string>
    <string name="version">Version:</string>
    <string name="size">Size:%s bytes</string>
    <string name="description">Description:</string>
    <string name="network_not_avaliable">Network not available!</string>
    <string name="sdcard_not_avaliable">SD card not available!</string>
    <string name="get_watch_info">getting watch information</string>
    <string name="install_alerting">you must keep power on,when updating </string>
    <string name="install_notices">please backup your datas, such as contacts,sms,call log,etc</string>
    <string name="update_later_msg">click to update</string>
    <string name="exit_title">update later</string>
    <string name="exit_message">you can update from status bar any time</string>
    <string name="check_file_failed">file check failed, please Re-Download </string>
    <string-array name="mode_entries">
        <item>save power mode</item>
        <item>realtime mode</item>
    </string-array>
    <string-array name="mode_entry_values" translatable="false">
        <item>0</item>
        <item>1</item>
    </string-array>
    <string name="bond_request">Bond Request</string>
    <string name="bond_request_message">Bond with %1$s?</string>
    <string name="notification_title_settings">Timeout Notification</string>
    <string name="notification_summary_settings">Enable/disable Timeout Notification</string>
    <string name="timout_noti_title">IndroidSync Timeout</string>
    <string name="timout_noti_content">IndroidSync running without Bluetooth connectivity ability for a long time</string>
    <string name="time_noti_ticker">IndroidSync disable auto connect</string>
    <string name="retry_connect">reconnect&#8230;</string>
    <string name="retry_connect_success">reconnect success</string>
    <string name="retry_connect_failed">reconnect failed</string>
    <string name="retry_connect_failed_with_no_address">Lost remote device</string>
    <string name="remote_ring_title">remote ring</string>
    <string name="remote_ring_msg">command coming from ( %1$s ) .\nclick button below to stop.</string>
    <string name="ime_title">Sync IME</string>
    <string name="ime_notice">click OK to send to watch</string>
    <string name="ime_reconnect">reconnect</string>
    <string name="ime_delete">delete</string>
    <string name="please_input">Input content please!</string>
    <string name="contactslite_midtable_authority" translatable="false">contactslite.mid-src</string>
    <string name="install_app_tab">Install</string>
    <string name="install_app_tab_description">All installed applications</string>
    <string name="all_app_tab">All</string>
    <string name="all_app_tab_description">All applications</string>
    <string name="no_application_infos">No Applications</string>
    <string name="application_manager_menu_title">Watch application manager</string>
    <string name="bluetooth_connect_wrong_message">Bluetooth connected Failed , try again please!</string>
    <string name="download_message">Downloading wait please !</string>
    <string name="uninstall_dialog_title">Uninstall</string>
    <string name="uninstall_dialog_message">Do you want uninstall this application ?</string>
    <string name="uninstall_dialog_ok">OK</string>
    <string name="uninstall_dialog_cancel">Cancel</string>
    <string name="uninstall_message_send_failed">Uninstall message send failed !</string>
    <string name="uninstall_toast">Uninstalling...</string>
    <string name="uninstall_success">Uninstall seccess</string>
    <string name="errcode_success">send success</string>
    <string name="errcode_cancel">send cancel</string>
    <string name="errcode_deny">send deny</string>
    <string name="errcode_unknown">send unknown</string>
    <string name="processing">processing,wait please!</string>
    <string name="error_process">original file no find!</string>
    <string name="media_tip">Synchronous video requires a lot of time, confirm synchronization?</string>
    <string name="media_yes">Yes</string>
    <string name="media_no">No</string>
    <string name="scan">Two dimensional code using the Glass sweep of the above binding equipment</string>
    <string name="binding">Bonded devices</string>
    <string name="my_text">我的二维码</string>
    <string name="device">设备名: </string>
    <string name="mac">MAC &#160;&#160;&#160;:</string>
    <string name="picture_nofind">no find pictures about glass</string>
    <string name="video_nofind">no find videos about glass</string>
    <string name="default_click">Default settings</string>
    <string name="time">Time</string>
    <string name="message">Message</string>
    <string name="media_picture">Picture</string>
    <string name="media_video">Video</string>
    <string name="position">geographical</string>
    <string name="phone">Mobile phone audio</string>
    <string name="wifi">WIFI synchronization</string>
    <string name="contact">Contacts</string>
    <string name="screen_control">Glass screen controller</string>
    <string name="progress">Synchronizing data</string>
    <string name="reflush">Click to refresh</string>
    <string name="sms_send_fail">Message data sync fail</string>
    <string name="contact_send_fail">Contact data sync fail</string>
    <string name="screen_control_msg">Share screen from glass and control it</string>
    <string name="screen_transport_failed">Glass transport data failed, exit then try again </string>
    <string name="wifi_off">Wifi sync requires wifi opened and connected</string>
    <string name="controller_info">You can slide up(down,left,right), click, long press to control screen from glass.</string>
    <string name="live_controller_info">You will see glass screen while starting live</string>
    <string name="start">Start to experience</string>
    <string name="live">Camera live to experience</string>
    <string name="setting">Settings</string>
    <string name="media">Media browser</string>
    <string name="bind_Glass">Binding of glasses</string>
    <string name="unbond">Ubinding</string>
    <string name="glass_photo">Photos</string>
    <string name="glass_video">Videos</string>
    <string name="glass_live">Live</string>
    <string name="take_photo">take photo</string>
    <string name="take_video">video/stop</string>
    <string name="finish">Finish</string>
    <string name="other_bind">No camera shortcut binding</string>
    <string name="pho_bind">camera binding</string>
    <string name="other_bind_info">A key binding glasses, you need glasses start after 2 minutes in operation, otherwise the binding will not be carried out    </string>
    <string name="reminder">Reminder:</string>
    <string name="key_binding">Scanning equipment</string>
    <string name="scan_device">Find glasses equipment are matched</string>
    <string name="bind_device">Binding is..., please try later</string>
    <string name="disconnect">Bind failed, click Retry</string>
    <string name="title_bind">Bind</string>
    <string name="title_sync">Sync</string>
    <string name="title_media">Media</string>
    <string name="title_screen">Screen</string>
    <string name="pair_device">Are the search...</string>
    <string name="no_found_device">Not found the equipment, click rescan</string>
    <string name="name_info">Have been scanned to equipment:</string>
    <string name="vedio_duration">Fragment duration</string>
    <string name="vedio_duration_summary">Choose video fragment duration</string>
			<string name="wifi_ap">Wifi Ap</string>
			<string name="wifi_ap_summary">Change Wifi ap ssid</string>
			<string name="live_wifi_ap_hint">Video live need to turn wifi ap on</string>
    <string name="bluetooth_phone">Bluetooth headset</string>
    <string name="bluetooth_phone_summary">Switch on/off Bluetoot headset</string>
    <string name="round_video">Driving record</string>
    <string name="round_video_summary">Switch on/off driving record</string>
    <string name="turn_wifi_ap_on">Turn ap on</string>
    <string name="welcome_use_hanlang">Welcome to use HanLang</string>
    <string name="hanlang_comment">1. Make sure glasses is nearby and on\n\n2. We will bind the glasses with strongest signal\n\n3. Make sure the glasses is not binded with other phone\n\n4.if cann\&apos;t bind the glasses,try to reboot it or the phone bluetooth</string>
    <string name="sync_contact">Sync Contacts</string>
    <string name="sync_contact_to_glass">Turn on/off contacts sync</string>
    <string name="search_bind">Search Bind</string>
    <string name="qr_bind">QrCode Bind</string>
</resources>