<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:widget="http://schemas.android.com/apk/res/cn.ingenic.glasssync"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sctek.smartglasses.ui.BindHanlangActivity" >
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        android:orientation="horizontal">
        
        <Button 
	        android:id="@+id/bind_hanlang_bt"
	        android:layout_width="0dp"
	        android:layout_height="40dp"
	        android:background="@drawable/bordershape"
	        android:layout_marginBottom="50dp"
	        android:text="@string/search_bind"
	        android:layout_weight="1"
	        android:layout_marginLeft="10dp"
	        android:onClick="onBindHanLangButtonClicked"/>
        
        <Button 
	        android:id="@+id/scan_qrcode_bt"
	        android:layout_width="0dp"
	        android:layout_height="40dp"
	        android:background="@drawable/bordershape"
	        android:layout_marginBottom="50dp"
	        android:text="@string/qr_bind"
	        android:layout_weight="1"
	        android:layout_marginLeft="20dp"
	        android:layout_marginRight="10dp"
	        android:onClick="onBindScanQrCodeClicked"/>
        
    </LinearLayout>
    
    
	
    <FrameLayout 
        android:id="@+id/progress_fl"
        android:layout_alignParentTop="true"
        android:layout_width="210dp"
        android:layout_height="210dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:background="@color/transparent">
        
        <TextView 
            android:id="@+id/bind_hanlang_hint_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/transparent"
            android:text="@string/welcome_use_hanlang"/>
        
	    <com.sctek.smartglasses.ui.CircularProgress 
	        
	        android:id="@+id/bind_hanlang_pb"
	        android:layout_width="200dp"
	        android:layout_height="200dp"
	        android:layout_gravity="center"
	        widget:circular_progress_indeterminate="false"
	        widget:circular_progress_color="@color/green_color"/>
	    
    </FrameLayout>
    
    <TextView 
        android:id="@+id/hanlang_comment_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/progress_fl"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:text="@string/hanlang_comment"/>

</RelativeLayout>
