<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sctek.smartglasses.ui.VedioPlayerActivity" >
    
    <io.vov.vitamio.widget.VideoView 
        android:id="@+id/video_player_vv"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    
    <ProgressBar 
        android:id="@+id/video_pb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminate="true"
        android:visibility="gone"/>
    
    <Button 
        android:id="@+id/play_bt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/start"
        android:visibility="gone"/>
    
    <LinearLayout 
	    android:id="@+id/wifi_ap_hint_lo"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:visibility="gone"
	    android:layout_marginTop="50dp"
	    android:orientation="vertical">
	    
	    <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="30dp"
	        android:text="@string/live_wifi_ap_hint"
	        android:layout_marginLeft="20dp"
	        android:layout_marginRight="20dp"
	        android:gravity="center"
	        android:layout_gravity="center_horizontal"/>
	    
	    <Button 
	        android:id="@+id/wifi_ap_on_bt"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/turn_wifi_ap_on"
	        android:layout_gravity="center"
	        android:clickable="true"/>
	    
	</LinearLayout>
    
</FrameLayout>